[package]
name = "empty_armagen_loader_author"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
serde_json = "1.0"
once_cell = "1.10"
rand = "0.8.5"
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "memoryapi",
    "errhandlingapi",
    "synchapi",
] }

[lib]
name = "armagen"
path = "src/lib.rs"

[features]
seperated = []
