[package]
name = "xor_armagen_loader_fb0sh"
version = "0.1.0"
edition = "2021"
default-run = "gen"

[dependencies]
ArmaGen = { git = "https://github.com/fr33t/ArmaGen.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.10"
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "memoryapi",
    "errhandlingapi",
    "synchapi",
] }

[lib]
name = "armagen"
path = "src/lib.rs"

[features]
separated = []
